[gd_scene load_steps=4 format=3 uid="uid://ep6nutbk5cst"]

[ext_resource type="Script" path="res://Scripts/MovingPlatform.gd" id="1_o6g8j"]
[ext_resource type="Texture2D" uid="uid://bxn8kvm570f80" path="res://Art/Test/White.png" id="2_yuuog"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irls3"]
size = Vector2(64, 64)

[node name="MovingPlatform" type="Node2D"]
position = Vector2(1328, 160)
script = ExtResource("1_o6g8j")

[node name="AnimatableBody2D" type="AnimatableBody2D" parent="."]
scale = Vector2(10, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatableBody2D"]
shape = SubResource("RectangleShape2D_irls3")

[node name="Sprite2D" type="Sprite2D" parent="AnimatableBody2D"]
texture = ExtResource("2_yuuog")

[node name="Position1" type="Marker2D" parent="."]
scale = Vector2(0.1, 1)
gizmo_extents = 32.0

[node name="Position2" type="Marker2D" parent="."]
position = Vector2(94.3999, 0)
scale = Vector2(0.1, 1)
gizmo_extents = 32.0
